# lets_not_go_bankrupt

./: README.md  hello.py  pyproject.toml  telbot.py
src/: parse_pdf.py
